--- a/readme.html
+++ b/readme.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="wp-admin/css/install.css?ver=20100228" type="text/css" />
 </head>
 <body>
-<h1 id="logo" class="aa">
+<h1 id="logo">
 	<a href="https://wordpress.org/"><img alt="WordPress" src="wp-admin/images/wordpress-logo.png" /></a>
 	<br /> 版本4.9
 </h1>
